--- a/ActBootstrap/catalogo.html
+++ b/ActBootstrap/catalogo.html
@@ -17,7 +17,7 @@
           <button
             class="navbar-toggler"
             type="button"
-            data-bs-toggle="collapse"
+            data-bs-toggle="collapse"   
             data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent"
             aria-expanded="false"
@@ -35,6 +35,12 @@
               <li class="nav-item px-3">
                 <a class="nav-link" href="#">Catalogo</a>
               </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="iniciosesion.html">Iniciar Sesion</a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="Registro.html">Registro</a>
+              </li>
               <li class="nav-item dropdown px-3">
                 <a
                   class="nav-link dropdown-toggle"
@@ -48,15 +54,13 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="somos.html">Quienes somos?</a></li>
                 <li><a class="dropdown-item" href="preguntasF.html">Preguntas Frecuentes</a></li>
-                </ul>
-                <li class="nav-item dropdown">
-                  <a href="iniciosesion.html" class="btn btn-secondary btn-sm btn-block" title="iniciosesion">Iniciar Sesión</a>
-              </li>
+              </ul>
             </ul>
           </div>
         </div>
       </nav>
       <!-- Fin -->
+
     </header>
     <main>
       <div class="row row-cols-1 row-cols-md-3 g-4 mx-auto w-50">
