--- a/ActBootstrap/index.html
+++ b/ActBootstrap/index.html
@@ -12,6 +12,7 @@
       <div class="container-fluid">
     <header>
       <!-- Inicio -->
+  
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
@@ -38,6 +39,12 @@
               <li class="nav-item ">
                 <a class="nav-link" href="catalogo.html">Catalogo</a>
               </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="iniciosesion.html">Iniciar Sesion</a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="Registro.html">Registro</a>
+              </li>
               <li class="nav-item dropdown ">
                 <a
                   class="nav-link dropdown-toggle"
@@ -51,10 +58,8 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="somos.html">Quienes somos?</a></li>
                 <li><a class="dropdown-item" href="preguntasF.html">Preguntas Frecuentes</a></li>
-                </ul>
-                <li class="nav-item dropdown">
-                  <a href="iniciosesion.html" class="btn btn-secondary btn-sm btn-block" title="iniciosesion">Iniciar Sesión</a>
-              </li>
+              </ul>
+
             </ul>
           </div>
         </div>
@@ -151,10 +156,7 @@
         <img src="../img/iconduoc.png" width="250">
         <p class="text-center">© 2024</p>
       </div>
-  
-      <div class="col mb-3">
-  
-      </div>
+
   
       <div class="col mb-3">
         <h5 class="py-2">Servicio</h5>
