--- a/ActBootstrap/kaoricompra.html
+++ b/ActBootstrap/kaoricompra.html
@@ -37,6 +37,12 @@
               <li class="nav-item ">
                 <a class="nav-link" href="catalogo.html">Catalogo</a>
               </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="iniciosesion.html">Iniciar Sesion</a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="Registro.html">Registro</a>
+              </li>
               <li class="nav-item dropdown ">
                 <a
                   class="nav-link dropdown-toggle"
@@ -50,10 +56,7 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="somos.html">Quienes somos?</a></li>
                 <li><a class="dropdown-item" href="preguntasF.html">Preguntas Frecuentes</a></li>
-                </ul>
-                <li class="nav-item dropdown">
-                  <a href="iniciosesion.html" class="btn btn-secondary btn-sm btn-block" title="iniciosesion">Iniciar Sesión</a>
-              </li>
+              </ul>
             </ul>
           </div>
         </div>
