--- a/ActBootstrap/preguntasF.html
+++ b/ActBootstrap/preguntasF.html
@@ -38,6 +38,12 @@
                 <li class="nav-item ">
                   <a class="nav-link" href="catalogo.html">Catalogo</a>
                 </li>
+                <li class="nav-item ">
+                  <a class="nav-link" href="iniciosesion.html">Iniciar Sesion</a>
+                </li>
+                <li class="nav-item ">
+                  <a class="nav-link" href="Registro.html">Registro</a>
+                </li>
                 <li class="nav-item dropdown ">
                   <a
                     class="nav-link dropdown-toggle"
@@ -52,9 +58,7 @@
                     <li><a class="dropdown-item" href="somos.html">Quienes somos?</a></li>
                     <li><a class="dropdown-item" href="index.html">Preguntas Frecuentes</a></li>
                   </ul>
-                  <li class="nav-item dropdown">
-                    <a href="iniciosesion.html" class="btn btn-secondary btn-sm btn-block" title="iniciosesion">Iniciar Sesión</a>
-                </li>
+
               </ul>
             </div>
           </div>
